# django-after-deploy

./: LICENSE  README.md  README.rst  setup.cfg  setup.py  test_settings.py  tox.ini
after_deploy/: __init__.py  apps.py  models.py  tests.py
after_deploy/management/commands/: after_deploy.py
after_deploy/migrations/: 0001_initial.py
