[metadata]
name = django-after-deploy
version = attr: after_deploy.__version__
url = https://github.com/dfop02/django-after-deploy
author = Diogo Fernandes
author_email = dfop02@hotmail.com
description = Automated tasks after-deploy for Django.
long_description = file: README.rst
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source = https://github.com/dfop02/django-after-deploy

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    django >= 1.6

[flake8]
exclude = build,.git,.tox,./tests/.env
ignore = W504,W601
max-line-length = 119
